# trealla

./: .clang-format  .gdbinit  CMakeLists.txt  CMakePresets.json  Justfile  Makefile  README.md  compile_commands.json  llm_context.md  mps2-an500.txt  setup  targets...  tpl.c
.github/workflows/: build.yaml
.hooks/: pre-commit
bench/: CMakePresets.json  main.c  mps3-an524_cycles.c  program.c  program.h  program.pl  run-x86_64
bench-results/2026-05-18_14-47-06/binary/: tpl-bench-cycles.elf-header.txt  tpl-bench-cycles.overview.txt  tpl-bench-cycles.program-headers.txt  tpl-bench-cycles.size.txt  tpl-bench-cycles.symbols-objdump.txt  tpl-bench-memory.largest-symbols.txt  tpl-bench-memory.overview.txt  tpl-bench-memory.program-headers.txt  tpl-bench-memory.size-by-section.txt  tpl-bench-memory.size.txt  tpl-bench-memory.symbols-by-size.txt  tpl-bench-memory.symbols-objdump.txt  tpl-bench-memory.symbols-readelf.txt  tpl-bench-runtime.elf-header.txt  tpl-bench-runtime.largest-symbols.txt  tpl-bench-runtime.overview.txt  tpl-bench-runtime.program-headers.txt  tpl-bench-runtime.section-headers.txt  tpl-bench-runtime.size-by-section.txt  tpl-bench-runtime.size.txt  tpl-bench-runtime.symbols-objdump.txt  tpl-bench-runtime.symbols-readelf.txt  tpl.largest-symbols.txt  tpl.overview.txt  tpl.sections.txt  tpl.size.txt
bench-results/2026-05-18_14-47-06/cycles/: cycles.stderr.txt
bench-results/2026-05-18_14-47-06/memory/: heaptrack.stdout.txt  heaptrack.zst
bench-results/2026-05-18_14-47-06/perf/: perf-stat.txt
bench-results/2026-05-18_14-47-06/runtime/: hyperfine.json  hyperfine.md  hyperfine.txt
bench-results/2026-05-18_15-07-07/binary/: tpl-bench-cycles.largest-symbols.txt  tpl-bench-cycles.overview.txt  tpl-bench-cycles.section-headers.txt  tpl-bench-cycles.sections.txt  tpl-bench-cycles.size-by-section.txt  tpl-bench-cycles.symbols-by-size.txt  tpl-bench-cycles.symbols-readelf.txt  tpl-bench-memory.elf-header.txt  tpl-bench-memory.overview.txt  tpl-bench-memory.section-headers.txt  tpl-bench-memory.sections.txt  tpl-bench-runtime.overview.txt  tpl-bench-runtime.sections.txt  tpl-bench-runtime.symbols-by-size.txt  tpl.elf-header.txt  tpl.overview.txt  tpl.program-headers.txt  tpl.section-headers.txt  tpl.size-by-section.txt  tpl.symbols-by-size.txt  tpl.symbols-objdump.txt  tpl.symbols-readelf.txt
bench-results/2026-05-18_15-07-07/cycles/: cycles.stderr.txt
bench-results/2026-05-18_15-07-07/memory/: heaptrack.stderr.txt  heaptrack.stdout.txt  heaptrack.zst
bench-results/2026-05-18_15-07-07/perf/: perf-stat.txt
bench-results/2026-05-18_15-07-07/runtime/: hyperfine.json  hyperfine.md  hyperfine.txt
boards/generic/: CMakePresets.json  board.cmake  generic.h  time.c
boards/mps2-an500/: CMakePresets.json  board.cmake  linker_script.ld  picolibc-cross.txt  startup.c
boards/mps2-an500/hal/: board.c  time.c  time.h
boards/mps2-an500/hal/io/: uart.c  uart.h
boards/mps3-an524/: CMakePresets.json  board.cmake  time.c
boards/mps3-an524/hal/: board.c
boards/netduinoplus2/: CMakePresets.json  board.cmake  linker_script.ld  startup.c
boards/netduinoplus2/hal/: board.c  time.c  time.h
boards/netduinoplus2/hal/io/: usart.c  usart.h
boards/teensy41/: CMakePresets.json  board.cmake  startup.c
boards/teensy41/hal/: board.c  time.c  time.h
boards/teensy41/hal/io/: uart.c  uart.h
cmake/: Benchmarks.cmake  BoardAPI.cmake  CodegenLibraryPl.cmake  CodegenPl.cmake  Dependencies.cmake  Formatting.cmake  Hooks.cmake  Linting.cmake  Options.cmake  Picolibc.cmake
cmake/presets/: base.json
cmake/toolchains/: arm-none-eabi.cmake
docs/reports/2026-04-23_12-39-46/: normalized.json
samples/: foo.c
src/: bif_atts.c  bif_bboard.c  bif_control.c  bif_csv.c  bif_database.c  bif_ffi.c  bif_format.c  bif_functions.c  bif_maps.c  bif_predicates.c  bif_sort.c  bif_streams.c  bif_threads.c  board.c  board.h  history.c  internal.h  library.c  module.c  network.c  parser.c  print.c  prolog.c  prolog.h  query.c  query.h  toplevel.c  trealla.h  unify.c  utf8.h
src/builtins/: bif_os.c
src/imath/: imath.c  imath.h  imrat.c  imrat.h
src/platform/api/: board_hal.h  memory.h  time_hal.h
src/platform/baremetal/: hal_utils.h  memory_baremetal.c  stubs.c
src/platform/baremetal/api/: serial_hal.h
src/platform/baremetal/picolibc/: iob.c
src/platform/common/: PLACEHOLDER.txt  memory_stats.c
src/platform/debug/: alloc_trace.c
src/platform/linux/: board.c  panic.c  panic.h
src/sre/: re.c  re.h
